--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 <div class="container-fluid">
     <div class="row row-cols-md-1 row-cols-lg-2 p-5 mb-3 align-items-center">
         <div class="col text-center">
-            <h1 class="d-md-none d-lg-block display-5 mb-4">{{site.data.text.heroTitle}}</h1>
-            <h1 class="d-lg-none d-md-block display-2 mb-4">{{site.data.text.smallDevice.heroTitle}}</h1>
-            <p class="d-md-none d-lg-block lead mb-4 px-5">{{site.data.text.heroSubtitle}}</p>
-            <p class="d-lg-none d-md-block fs-2 lead mb-5 px-5">{{site.data.text.heroSubtitle}}</p>
+            <h1 class="d-md-none d-lg-block display-4 mb-4">{{site.data.text.heroTitle}}</h1>
+            <h1 class="d-lg-none d-md-block display-3 mb-4">{{site.data.text.smallDevice.heroTitle}}</h1>
+            <p class="d-md-none d-lg-block fs-5 lead mb-4 px-5">{{site.data.text.heroSubtitle}}</p>
+            <p class="d-lg-none d-md-block fs-4 lead mb-5 px-5">{{site.data.text.heroSubtitle}}</p>
 
             <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
                 Find Us</a>
@@ -27,31 +27,31 @@ layout: default
             <div class="row row-cols-lg-3 text-blur">
                 <div class="col">
                     <div class="card h-100 border border-0 text-end bg-transparent text-white">
-                        <div class="card-body">
-                            <p class="card-title fs-4">Business Hours <i class="bi bi-clock-fill text-danger"></i>
+                        <div class="card-body font-spacing-1 ">
+                            <p class="card-title fs-5">Business Hours <i class="bi bi-clock-fill text-danger"></i>
                             </p>
-                            <p class="card-text lh-lg fs-6 text-uppercase">
+                            <p class="card-text lh-lg fs-6">
                                 Monday - Closed<br>
                                 Tuesday 6AM - 3PM<br>
                                 Wednesday - Friday 6AM - 9PM<br>
-                                Saturday - Sunday 6AM - 3PM</p>
+                                Saturday - Sunday  6AM - 3PM</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 border border-0 bg-transparent text-center text-white">
-                        <div class="card-body">
-                            <p class="card-title fs-4"><i class="bi bi-geo-alt-fill text-danger"></i>
+                        <div class="card-body font-spacing-1">
+                            <p class="card-title fs-5"><i class="bi bi-geo-alt-fill text-danger"></i>
                                 Location</p>
-                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-6 fw-medium text-uppercase text-white"
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-6 fw-medium text-white"
                                 href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">152 Strode
                                 Ave
                                 Coatesville, PA 19320</a>
                         </div>
-                        <div class="card-body">
-                            <p class="card-title fs-4"><i class="bi bi-telephone-fill text-danger"></i>
+                        <div class="card-body font-spacing-1">
+                            <p class="card-title fs-5"><i class="bi bi-telephone-fill text-danger"></i>
                                 Phone</p>
-                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-6 fw-medium text-uppercase text-white"
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-6 fw-medium text-white"
                                 href="tel:+16103843221">
                                 (610) 384 - 3221
                             </a>
@@ -60,14 +60,14 @@ layout: default
                 </div>
                 <div class="col">
                     <div class="card h-100 border border-0 text-start bg-transparent text-white">
-                        <div class="card-body">
-                            <p class="card-title fs-4">Delivery Hours <i class="bi bi-clock-fill text-danger"></i>
+                        <div class="card-body font-spacing-1">
+                            <p class="card-title fs-5">Delivery Hours <i class="bi bi-clock-fill text-danger"></i>
                             </p>
-                            <p class="card-text lh-lg fs-6 text-uppercase">
-                                Monday- Closed<br>
-                                Tuesday 7AM - 3PM<br>
-                                Wednesday - Friday 7AM - 9PM<br>
-                                Saturday - Sunday 7AM - 3PM</p>
+                            <p class="card-text lh-lg fs-6">
+                                Monday - Closed<br>
+                                Tuesday: 7AM - 3PM<br>
+                                Wednesday - Friday  7AM - 9PM<br>
+                                Saturday - Sunday  7AM - 3PM</p>
                         </div>
                     </div>
                 </div>
